<resources>
    <string name="app_name">Simple Finance</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_email_hint">Введите email</string>
    <string name="auth_password_hint">Введите пароль</string>
    <string name="button_login_text">Войти</string>
    <string name="auth_name_hint">Введите имя</string>
    <string name="cannot_be_empty_warning">Поле не может быть пустым!</string>
    <string name="create_account_text">Нет аккаунта? - СОЗДАЙТЕ</string>
    <string name="login_or_email_error_text">Ошибка. Неверный логин или пароль!</string>
    <string name="account_exists_text">Уже есть аккаунт - ВОЙДИТЕ</string>
    <string name="button_signup_text">Зарегистрироваться</string>
</resources>